<!--
  ~ Copyright (c) 2019. Florian Taurer.
  ~
  ~ This file is part of Unita SDK.
  ~
  ~ Unita is free a SDK: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Unita is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Unita.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">SocialWall</string>
    <string name="permission_request_explanation_positive">Open the Permission Menu</string>
    <string name="permission_request_explanation_negative">No thanks</string>
    <string name="permissionRequestExplanation">Microphone permission is needed to receive messages via sound.</string>
    <string name="on_receiving_listening_permission_required">Data-over-sound permission required to receive messages</string>
    <string name="on_sending_sending_permission_required">Data-over-sound permission required to send messages</string>
    <string name="decoder_start_text">Start listening...</string>
    <string name="title_home">Receiving</string>
    <string name="title_dashboard">Pairing</string>
    <string name="title_notifications">Settings</string>
    <string name="send_message_no_receiver">Please pair with a beacon first!</string>
    <string name="nav_title_contact">Contact</string>
    <string name="layout_no_contacts">No contacts added yet!</string>
    <string name="nav_send">Sending</string>
    <string name="contact_delete_dialog_title">Delete Contact Entry</string>
    <string name="contact_delete_dialog_message">Do you want to delete this Contact?</string>
    <string name="contact_add_dialog_title">Add Contact</string>
    <string name="contact_add_dialog_message">Please add a contact for communication!</string>
    <string name="contact_add_dialog_positive_button">Add</string>
    <string name="contact_add_dialog_negative_button">Cancel</string>
    <string name="paired_device_dialog_message">Do you want to pair with Beacon %s?</string>
    <string name="paired_device_dialog_positive_button">Yes</string>
    <string name="paired_device_dialog_negative_button">No</string>
    <string name="paired_beacon_remove_title">Remove connected Beacon</string>
    <string name="paired_beacon_remove_message">Do you want to remove this Beacon?</string>
    <string name="paired_beacon_snackbar_message">Beacon %s got your message!</string>
    <string name="paired_beacon_snackbar_success">Beacon %s paired!</string>
    <string name="snackbar_text_beacon_not_get_message">Beacon did not get the message. Please try again.</string>
    <string name="dialog_message_delete_title">Delete Message Entry</string>
    <string name="dialog_message_delete_message">Do you want to delete this Message?</string>
    <string name="dialog_command_latest_local_title">Choose Receiver</string>
    <string name="dialog_command_latest_local_message">Please choose a beacon!</string>
    <string name="dialog_command_latest_local_pos_button">Send</string>
    <string name="dialog_command_latest_local_neg_button">Cancel</string>
    <string name="dialog_command_all_public_title">Choose Receiver</string>
    <string name="dialog_command_all_public_message">Please choose a beacon!</string>
    <string name="dialog_command_all_public_pos_button">Send</string>
    <string name="dialog_command_all_public_neg_button">Cancel</string>
    <string name="state_searching_beacons">searching for Beacon</string>
    <string name="state_waiting_pairing">waiting for pairing</string>
    <string name="state_pairing_successful">pairing successful</string>
    <string name="state_pairing_progress">pairing in Progress</string>
    <string name="dialog_title_set_preset">Set Setting Preset</string>
    <string name="message_adapter_from">From (SocialWall-ID %d)</string>
    <string name="message_adapter_to">To (SocialWall-ID %d)</string>
    <string name="message_adapter_to_all">To all</string>
    <string name="service_status_running">running</string>
    <string name="addcontact_socialwall_number">SocialWall Number</string>
    <string name="enter_contact_socialwall_number">Enter contact SocialWall number!</string>
    <string name="addcontact_name">Name</string>
    <string name="enter_contact_name">Enter contact Name!</string>
    <string name="latest_local_contact">Contact</string>
    <string name="latest_local_receiving_beacon">Receiving Beacon</string>
    <string name="all_public_receiving_beacon">Receiving Beacon</string>
    <string name="login_title">Login</string>
    <string name="login_button_submit">Submit</string>
    <string name="login_hint_text">Please type in your loginname!</string>
    <string name="button_get_all_public_messages">get all public messages</string>
    <string name="button_get_latest_private_message">get latest private Message</string>
    <string name="no_messages_received_yet">No Messages received yet</string>
    <string name="no_beacons_added_yet">No beacons added yet!</string>
    <string name="button_search_for_beacons">Search for Beacons</string>
    <string name="send_local_beacon">Choose Local Beacon</string>
    <string name="send_contact_partner">Leave private message for</string>
    <string name="send_message">Message</string>
    <string name="send_hint_enter_message">Enter message!</string>
    <string name="button_send">Send</string>
    <string name="public_message">public message</string>
    <string name="private_message">private message</string>
    <string name="settings_preset_label">Preset</string>
    <string name="settings_preset_title">Default Preset</string>
    <string name="settings_volume">Volume</string>
    <string name="settings_number_of_frequencies">Number of frequencies</string>
    <string name="settings_maximum_message_length">Maximum message length</string>
    <string name="settings_frequency_space">Frequency Space</string>
    <string name="settings_pause_period">Pause period</string>
    <string name="settings_bit_period">Bit period</string>
    <string name="settings_base_frequency">Base frequency</string>
    <string name="settings_change_preset_button">Change Preset</string>
</resources>
