<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Florian Taurer.
  ~
  ~ This file is part of Unita SDK.
  ~
  ~ Unita is free a SDK: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Unita is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Unita.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/baseline_smartphone_black_48"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_commands"
        android:icon="@drawable/baseline_send_white_48"
        android:title="@string/nav_send" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/baseline_message_white_48"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/title_notifications" />


</menu>