<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Florian Taurer.
  ~
  ~ This file is part of Unita SDK.
  ~
  ~ Unita is free a SDK: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Unita is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Unita.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/claCommands"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintBottom_toTopOf="@+id/nav_view"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/send_local_beacon"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgrState" />

        <TextView
            android:id="@+id/txtComPartner"
            android:layout_width="234dp"
            android:layout_height="31dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/send_contact_partner"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtMsgMessage" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="169dp"
            android:layout_height="27dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/send_message"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnMsgReceiver" />

        <EditText
            android:id="@+id/edtMsgReceiver"
            android:layout_width="314dp"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Enter ID!"
            android:inputType="number"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/edtMsgCommunicationPartner"
            android:layout_width="314dp"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:enabled="false"
            android:hint="Enter ID!"
            android:inputType="number"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtComPartner" />

        <EditText
            android:id="@+id/edtMsgMessage"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/send_hint_enter_message"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnMsgSend"
            android:layout_width="195dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnContacts" />

        <Spinner
            android:id="@+id/spnMsgReceiver"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView" />

        <Spinner
            android:id="@+id/spnContacts"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:minHeight="80dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtComPartner" />


        <RadioGroup
            android:id="@+id/rgrState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:checkedButton="@id/rbtPublic"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbtPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/public_message" />

            <RadioButton
                android:id="@+id/rbtPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_message" />

        </RadioGroup>


    </android.support.constraint.ConstraintLayout>
</ScrollView>