<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Florian Taurer.
  ~
  ~ This file is part of Unita SDK.
  ~
  ~ Unita is free a SDK: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Unita is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Unita.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/claSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintBottom_toTopOf="@+id/nav_view"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtPresetLabel"
            android:layout_width="136dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_preset_label"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnNumberOfFrequencies" />

        <TextView
            android:id="@+id/txtPreset"
            android:layout_width="220dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_preset_title"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnChangePreset"
            app:layout_constraintTop_toBottomOf="@+id/txtPresetLabel" />

        <TextView
            android:id="@+id/txtVolume"
            android:layout_width="136dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_volume"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMessageLength" />

        <TextView
            android:id="@+id/txtNumberOfFrequencies"
            android:layout_width="289dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_number_of_frequencies"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skbVolume" />

        <TextView
            android:id="@+id/txtMessageLength"
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_maximum_message_length"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFrequencySpace" />

        <EditText
            android:id="@+id/edtMessageLength"
            android:layout_width="223dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:text="18"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtMessageLength"
            app:layout_constraintTop_toBottomOf="@+id/edtFrequencySpace" />

        <EditText
            android:id="@+id/edtFrequencySpace"
            android:layout_width="224dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:text="100"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtFrequencySpace"
            app:layout_constraintTop_toBottomOf="@+id/edtPausePeriod" />

        <TextView
            android:id="@+id/txtFrequencySpace"
            android:layout_width="133dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_frequency_space"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPausePeriod" />

        <EditText
            android:id="@+id/edtPausePeriod"
            android:layout_width="224dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:text="0"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPausePeriod"
            app:layout_constraintTop_toBottomOf="@+id/edtBitperiod" />

        <TextView
            android:id="@+id/txtPausePeriod"
            android:layout_width="134dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_pause_period"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBitperiod" />

        <EditText
            android:id="@+id/edtBitperiod"
            android:layout_width="224dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:text="100"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtBitperiod"
            app:layout_constraintTop_toBottomOf="@+id/edtBaseFrequency" />

        <TextView
            android:id="@+id/txtBitperiod"
            android:layout_width="134dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_bit_period"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBaseFrecuency" />

        <TextView
            android:id="@+id/txtBaseFrecuency"
            android:layout_width="134dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/settings_base_frequency"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtBaseFrequency"
            android:layout_width="224dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="18000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtBaseFrecuency"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/skbVolume"
            android:layout_width="371dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:progress="70"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVolume" />

        <Spinner
            android:id="@+id/spnNumberOfFrequencies"
            android:layout_width="369dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNumberOfFrequencies" />

        <Button
            android:id="@+id/btnChangePreset"
            android:layout_width="136dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/settings_change_preset_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPresetLabel" />

        <TextView
            android:id="@+id/txtBasefrequencySetting"
            android:layout_width="223dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtBaseFrecuency"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBitperiodSetting"
            android:layout_width="223dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtBitperiod"
            app:layout_constraintTop_toBottomOf="@+id/txtBasefrequencySetting" />

        <TextView
            android:id="@+id/txtPauseperiodSetting"
            android:layout_width="223dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtPausePeriod"
            app:layout_constraintTop_toBottomOf="@+id/txtBitperiodSetting" />

        <TextView
            android:id="@+id/txtFrequencyspaceSetting"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtFrequencySpace"
            app:layout_constraintTop_toBottomOf="@+id/txtPauseperiodSetting" />

        <TextView
            android:id="@+id/txtMaxLengthSetting"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/txtMessageLength"
            app:layout_constraintTop_toBottomOf="@+id/txtFrequencyspaceSetting" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>